# RickTool

./: .gitignore  Cargo.toml  README.md  index.html  package.json  sqlite.db  vite.config.ts
db/: test.db
doc/: 启动图.puml
rick-macro/: Cargo.toml
rick-macro/src/: lib.rs
rick_app/: package.json  vite.config.ts
rick_app/html/: index.html
rick_app/src/: App.tsx  main.tsx  model.ts  styles.css  vars.less
rick_app/src-tauri/: Cargo.toml  tauri.conf.json
rick_app/src-tauri/src/: context.rs  global.rs  main.rs
rick_app/src-tauri/src/app/: application.rs  listener.rs  mod.rs
rick_app/src-tauri/src/app/actuator/: mod.rs  model.rs  shell.rs
rick_app/src-tauri/src/app/module/: action.rs  manager.rs  mod.rs
rick_app/src-tauri/src/app/service/: invoke.rs  mod.rs
rick_app/src-tauri/src/model/: app_log.rs  mod.rs
rick_app/src-tauri/src/modules/: app_module.rs  mod.rs  sqlite_module.rs
rick_app/src-tauri/src/seq/: mod.rs
rick_app/src-tauri/src/service/: mod.rs  test.rs
rick_app/src-tauri/src/service/app/: app.rs  app_group.rs  app_runtime.rs  app_start.rs  mod.rs
rick_app/src-tauri/src/service/common/: files.rs  mod.rs
rick_app/src-tauri/src/service/terminal/: mod.rs  model.rs
rick_app/src-tauri/src/store/: mod.rs
rick_app/src-tauri/src/store/app/: mod.rs
rick_app/src-tauri/src/utils/: arc_val.rs  global_val.rs  mod.rs  thread_pool.rs  thread_signal.rs
rick_app/src-tauri/tests/: conpty_test.rs
rick_app/src/assembly_simulation/: Code.ts  Interpreter.ts  Program.ts  Register.ts  base.ts  operate_utils.ts
rick_app/src/assembly_simulation/compiler/: Compiler.ts
rick_app/src/assembly_simulation/exception/: Exception.ts
rick_app/src/assembly_simulation/handler/: calculate.ts  jump.ts  mov.ts
rick_app/src/component/: block-circle.tsx  logo-input.tsx  path-input.tsx  text-circle.less  text-circle.tsx
rick_app/src/component/arg-input/: arg-config.tsx  arg-data.ts  arg-input.less  index.tsx
rick_app/src/component/context-menu/: context-menu-item.tsx  context-menu.tsx  index.less  index.tsx
rick_app/src/config/routes/: config.tsx  index.tsx
rick_app/src/layout/main-layout/: index.css  index.tsx
rick_app/src/pages/app/: app-form.tsx  app-model.ts  app-request.ts  app.less  data.ts  index.tsx
rick_app/src/pages/app/group/: index.tsx
rick_app/src/pages/app/items/: app-start.less  app-start.tsx  execute-item.tsx  java-item.tsx  nodejs-item.tsx  python-item.tsx  website-item.tsx
rick_app/src/pages/app/runtime/: app-runtime-request.ts  index.tsx
rick_app/src/pages/home/: index.tsx
rick_app/src/pages/terminal/: index.tsx  terminal-data-utils.ts  terminal-model.ts  terminal-request.ts
rick_app/src/utils/: common.ts  dom-utils.ts  invoke.ts  uid.ts
rick_core/: Cargo.toml
rick_core/examples/: terminal.rs
rick_core/rick_core_macro/: Cargo.toml
rick_core/rick_core_macro/src/: lib.rs  utils.rs
rick_core/rick_core_macro/src/sqlite/: impl_table.rs  meta.rs  mod.rs
rick_core/src/: lib.rs
rick_core/src/app/: application.rs  listener.rs
rick_core/src/app/actuator/: mod.rs  shell.rs
rick_core/src/error/: mod.rs
rick_core/src/sqlite/: cond.rs  conn.rs  mod.rs  query.rs  update.rs
rick_core/src/utils/: global_val.rs  mod.rs  thread_callback.rs  thread_signal.rs
rick_core/tests/: async_await.rs  sqlite_derive_test.rs  thread_tests.rs  types_tests.rs
rick_loader/: Cargo.toml
rick_loader/go_loader/: go.mod  main.go
rick_net/: Cargo.toml
rick_net/src/: main.rs
rick_terminal/: Cargo.toml
rick_terminal/examples/: powershell_terminal.rs
rick_terminal/src/: lib.rs  uac.rs
rick_terminal/src/terminal/: envs.rs  mod.rs  model.rs
rick_terminal/src/terminal/_impl/: mod.rs
rick_terminal/src/terminal/_impl/conpty/: conpty.rs  mod.rs  os.rs  pipe.rs
rick_terminal/src/terminal/win/: mod.rs  os.rs  pipe.rs  process_holder.rs  stdio.rs  utils.rs
rick_terminal/src/utils/: mod.rs  snow.rs
rick_terminal/src/utils/io/: protocol.rs
rick_terminal/tests/: terminal_test.rs  test_ptr.rs
sql/: default.sql
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/command/: mod.rs
src-tauri/src/config/: mod.rs  tauri.rs
src-tauri/src/context/: api_handler.rs  api_manager.rs  events.rs  mod.rs
src-tauri/src/tests/: mod.rs
src-tauri/src/utils/: mod.rs  thread_pool.rs  thread_signal.rs  watch.rs
src-tauri/test/: handler.rs
src/components/context-menu-panel/: ContextMenu.css  ContextMenu.tsx  ContextMenuItem.css  ContextMenuItem.tsx  ContextMenuTrigger.tsx  index.tsx
src/components/form/shortcut-key-input/: index.tsx
src/components/iconfont/: index.css  index.tsx
src/config/init/: index.ts
src/config/routes/: config.tsx  index.tsx
src/layout/main-layout/: index.css  index.tsx
src/pages/app/: app-form.tsx  app-item.css  app-item.tsx  app-run.tsx  index.css  index.tsx
src/pages/environment/: create.tsx  environment-form.tsx  index.tsx
src/pages/index/: Index.tsx
src/pages/local-terminal/: index.tsx
src/service/: EnvironmentService.ts  environment.d.ts
src/service/invoke/: Hello.ts  VApp.ts  Window.ts
src/service/store/: index.ts
src/store/: configSlice.ts  index.ts  store.d.ts  vapp.d.ts
src/utils/: api.ts  copy.ts  id.ts  types.ts
