[package]
name = "rick_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0.144"}
serde_json = {version = "1.0.85"}
futures = { version = "0.3.28", features = ["async-await", "executor", "std"]}