[package]
name = "rick_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.31"
chrono = "0.4"
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0.144" }
serde_json = { version = "1.0.85" }

[dependencies.rick_core_macro]
path = "rick_core_macro"