[package]
name = "rick_terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#windows = { version = "0.39", features = []}
#windows-sys = { version = "0.36", features = []}
winapi = {version = "0.3.9", features = ["namedpipeapi", "consoleapi", "wincontypes"]}