[package]
name = "rick_terminal"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rick_core = { path = "../rick_core" }
winapi = {version = "0.3.9", features = ["shellapi", "namedpipeapi", "minwindef", "consoleapi", "minwinbase", "errhandlingapi", "wincontypes", "processthreadsapi", "synchapi", "handleapi", "fileapi", "winbase", "winnt"]}
log = "0.4.20"
lazy_static = "1.4"

[[bin]]
name='uac'
path='src/uac.rs'

[features]