[package]
name = "RickTools"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-all", "fs-all", "path-all", "shell-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite="0.30.4"
thiserror="1.0"
lazy_static="1.4.0"
futures = "0.3.24"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
