[package]
name = "rick_app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
rick_core = { path="../../rick_core"}
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0.144"}
serde_json = {version = "1.0.85"}
futures = { version = "0.3.28", features = ["async-await", "executor", "std"] }

