[package]
name = "rick_app"
version = "0.1.0"
description = "Mrhan"
authors = ["Mrhan"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
rick_core = { path = "../../rick_core" }
rick_core_macro = { path = "../../rick_core/rick_core_macro" }
sqlite = "0.31"
serde = { version = "1.0.144" }
serde_json = { version = "1.0.85" }
futures = { version = "0.3.28", features = ["async-await", "executor", "std"] }
image = "0.24"
imageproc = "0.23"
md5 = "0.7.0"

[dependencies.tauri]
version = "1.3"
features = ["custom-protocol", "shell-open", "dialog"]
